<!--
  ~     Jaron  Copyright (C) 2019  Nikhil Soni
  ~     This program comes with ABSOLUTELY NO WARRANTY; for details type `show w'.
  ~     This is free software, and you are welcome to redistribute it
  ~     under certain conditions; type `show c' for details.
  ~
  ~ The hypothetical commands `show w' and `show c' should show the appropriate
  ~ parts of the General Public License.  Of course, your program's commands
  ~ might be different; for a GUI interface, you would use an "about box".
  ~
  ~   You should also get your employer (if you work as a programmer) or school,
  ~ if any, to sign a "copyright disclaimer" for the program, if necessary.
  ~ For more information on this, and how to apply and follow the GNU GPL, see
  ~ <https://www.gnu.org/licenses/>.
  ~
  ~   The GNU General Public License does not permit incorporating your program
  ~ into proprietary programs.  If your program is a subroutine library, you
  ~ may consider it more useful to permit linking proprietary applications with
  ~ the library.  If this is what you want to do, use the GNU Lesser General
  ~ Public License instead of this License.  But first, please read
  ~ <https://www.gnu.org/licenses/why-not-lgpl.html>.
  -->

<resources>
    <string name="app_name">Jaron</string>
    <string name="Preferences">Preferences</string>
    <string name="na">NA</string>
    <string name="empty" />

    <!--Intro Fragment-->
    <string name="introStart">Start</string>
    <string name="introBudgetHint">Enter Monthly Budget…</string>

    <!--Expense Utility-->
    <string name="expenseTotalAvailable">Total</string>
    <string name="expenseTotalSpend">Spend</string>
    <string name="expenseTotalLeft">Left</string>
    <string name="expenseCurrencySymbol">₹</string>

    <!--Menu Items-->
    <string name="menuItemSearch">Search</string>
    <string name="menuItemSettings">Settings</string>
    <string name="menuItemAbout">About</string>

    <!--Popup menu items-->
    <string name="popupMenuItemExpenseEdit">Edit</string>
    <string name="popupMenuItemExpenseDelete">Delete</string>

    <!--New Expense Dialog-->
    <string name="newExpenseAmount">Amount…</string>
    <string name="newExpenseTitle">For…</string>
    <string name="newExpenseDescription">Description…</string>
    <string name="newExpenseTags">Tags…</string>
    <string name="newExpenseDialogTitle">New Expense</string>
    <string name="newExpenseCreate">Create</string>
    <string name="newExpenseCancel">Cancel</string>
    <string name="newExpenseUpdate">Update</string>
    <string name="newExpenseErrorNoValue">Please enter the amount</string>
    <string name="newExpenseErrorNegativeValue">Amount should be greater than zero</string>
    <string name="newExpenseErrorOverflowValue">Amount should be less than monthly budget</string>
    <string name="newExpenseErrorNoTitle">Please enter the title for the expense</string>
    <string name="newExpenseErrorNoDescription">Please enter the description for the expense</string>

    <!--Month Year Picker Dialog-->
    <string name="monthYearPickerDialogOkay">Okay</string>
    <string name="monthYearPickerDialogTabMonth">Month</string>
    <string name="monthYearPickerDialogTabYear">Year</string>
    <string name="monthYearPickerDialogCancel">Cancel</string>


    <!-- aboutStrings-->
    <string name="aboutLibraries">Open-source licences</string>
    <string name="aboutLibrariesHead">Jaron is built with the help of these great libraries</string>
    <string name="aboutLicense">License Info</string>
    <string name="aboutLicenseUrl" translatable="false">https://github.com/nsnikhil/Jaron/blob/master/LICENSE</string>
    <string name="aboutApp">Money management application</string>

    <!--<string name="aboutNikhil" translatable="false">Jaron is written by Nikhil Soni\n-->
    <!--<a href="https://twitter.com/imnsnik">Twitter</a>|<a href="https://github.com/nsnikhil/">Github</a> </string>-->

    <string name="aboutNikhil">Jaron  Copyright © 2019  Nikhil Soni</string>

    <string name="aboutSourceCode" translatable="false">The source code is available on <a href="https://github.com/nsnikhil/Jaron">Github</a></string>

    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!--Shared Preferences Key-->
    <string name="sharedPreferenceKeyTotalAmount">sharedPreferenceKeyTotalAmount</string>

    <!--Alert dialog-->
    <string name="alertDialogDeleteTitle">Warning</string>
    <string name="alertDialogDeleteMessage">Are you sure you want to delete this expense ?</string>
    <string name="alertDialogDeletePositiveText">Yes</string>
    <string name="alertDialogDeleteNegativeText">No</string>

    <!--Bundle Keys-->
    <string name="bundleExpenseEntity">bundleExpenseEntity</string>
    <string name="bundleExpenseEntityId">bundleExpenseEntityId</string>

    <!--Month summary-->
    <string name="monthSummaryTotalTitle">Total</string>
    <string name="monthSummaryLeftTitle">Left</string>
    <string name="monthSummarySpendTitle">Spend</string>

    <!--Preferences Screen-->
    <string name="preferenceCategoryGeneral">General</string>
    <string name="preferenceTitleChangeMonthlyBudget">Monthly Budget</string>
    <string name="preferenceTitleChangeMonthlyBudgetKey">preferenceTitleChangeMonthlyBudgetKey</string>
    <string name="preferenceCurrency">Currency</string>
    <string name="preferenceCurrencyKey">preferenceCurrencyKey</string>
    <string name="preferenceCurrencyDefaultValue">INR</string>

    <!--Notification String-->
    <string name="notificationExpenseAdded">Added new expense</string>
    <string name="notificationExpenseUpdated">Expense Updated</string>
    <string name="notificationExpenseDeleted">Expense deleted</string>


    <string-array name="currencies">
        <item>INR</item>
        <item>USD</item>
        <item>AUD</item>
        <item>Pound</item>
        <item>Euro</item>
    </string-array>

</resources>
