<?xml version="1.0" encoding="utf-8"?><!--
  ~     Jaron  Copyright (C) 2019  Nikhil Soni
  ~     This program comes with ABSOLUTELY NO WARRANTY; for details type `show w'.
  ~     This is free software, and you are welcome to redistribute it
  ~     under certain conditions; type `show c' for details.
  ~
  ~ The hypothetical commands `show w' and `show c' should show the appropriate
  ~ parts of the General Public License.  Of course, your program's commands
  ~ might be different; for a GUI interface, you would use an "about box".
  ~
  ~   You should also get your employer (if you work as a programmer) or school,
  ~ if any, to sign a "copyright disclaimer" for the program, if necessary.
  ~ For more information on this, and how to apply and follow the GNU GPL, see
  ~ <https://www.gnu.org/licenses/>.
  ~
  ~   The GNU General Public License does not permit incorporating your program
  ~ into proprietary programs.  If your program is a subroutine library, you
  ~ may consider it more useful to permit linking proprietary applications with
  ~ the library.  If this is what you want to do, use the GNU Lesser General
  ~ Public License instead of this License.  But first, please read
  ~ <https://www.gnu.org/licenses/why-not-lgpl.html>.
  -->


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/matchParent">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/matchParent"
        android:paddingBottom="@dimen/sixteen"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/aboutNikhil"
            style="@style/horizontal"
            android:layout_height="?listPreferredItemHeight"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/aboutNikhil"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/aboutSourceCode"
            style="@style/wrapContent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/sixteen"
            android:padding="@dimen/sixteen"
            android:text="@string/aboutSourceCode"
            android:textAlignment="center"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutNikhil" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/aboutLibraries"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/sixteen"
            android:text="@string/aboutLibraries"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutSourceCode" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/aboutLicense"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/sixteen"
            android:text="@string/aboutLicense"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutLibraries" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
